<resources>
    <string name="app_name">Sales Diary</string>
    <string name="sales_diary">ales Diary</string>
    <string name="splash_image">splash_image</string>
    <string name="create_profile">Create Profile</string>
    <string name="stock_icon">stock_icon</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="long_sign_in_text">Already have an account, Sign In</string>
    <string name="password">Password</string>
    <string name="access_catalog_header">Access Catalog</string>
    <string name="log_in">Log In</string>
    <string name="long_sign_up_text">Don\'t have an account, sign up</string>
    <string name="product_name">Product Name</string>
    <string name="inventory_image">inventoryImage</string>
    <string name="quantity">Quantity</string>
    <string name="salesPrice">Price</string>
    <string name="barcode">Barcode</string>
    <string name="edit">Edit</string>
    <string name="stock_up_instruction">Stock up your catalog</string>
    <string name="camera_button">camera button</string>
    <string name="quantity_left">qty_left_symbol</string>
    <string name="amount_sold">amt_sold_symb</string>
    <string name="record_action">Record</string>
    <string name="product_update_instr">Change Product detail</string>
    <string name="stock_up">Stock Up</string>
    <string name="product_catalog_title">Product Catalog</string>
    <string name="product_image">product image</string>
    <string name="stock_text">stock</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="refresh_item">Refresh</string>
    <string name="catalog_item">Catalog</string>
    <string name="record_item">Record</string>
    <string name="report_item">Report</string>
    <string name="help_item">Help</string>
    <string name="about_item">About</string>
    <string name="exit_item">Exit</string>
    <string name="daily_text">Daily</string>
    <string name="calendar_drawable">calendar drawable</string>
    <string name="monthly_text">Monthly</string>
    <string name="weekly_text">Weekly</string>
    <string name="quarterly_text">Quarterly</string>
    <string name="yearly_text">Yearly</string>
    <string name="select_time_frame_instr">Select Report Time Frame</string>
    <string name="semester_text">Semester</string>
    <string name="general_report">General Report</string>
    <string name="product_code">product_code</string>
    <string name="sample_text">sample text</string>
    <string name="price_icon">salesPrice icon</string>
    <string name="cart_icon">cart icon</string>
    <string name="total_sales">Total Sales:</string>
    <string name="total_profit">Total Profit:</string>
    <string name="more_text">More</string>
    <string name="total_loss">Total Loss:</string>
    <string name="total_cost">Total Cost:</string>
    <string name="preview_icon">preview_icon</string>
    <string name="print_icon">print_icon</string>
    <string name="share_icon">share_icon</string>
    <string name="nav_header_image">nav header image</string>
    <string name="summary">summary</string>
    <string name="required">Required.</string>
    <string name="auth_successful">Authentication successful.</string>
    <string name="Login_successful">Login successful</string>
    <string name="auth_failed">Authentication Failed!</string>
    <string name="inventory_title">Inventory</string>
    <string name="about_title">About</string>
    <string name="edit_product">Edit Product</string>
    <string name="help_title">Help</string>
    <string name="inflow_title">Stock Inflow</string>
    <string name="outflow_title">Stock Outflow</string>
    <string name="periodic_report_title">Periodic Report</string>
    <string name="preview_title">Preview</string>
    <string name="catalog_title">Catalog</string>
    <string name="summary_title">Summary</string>
    <string name="record_sales_title">Record Sales</string>
    <string name="select_report_title">Select Report</string>
    <string name="cost">cost</string>
    <string name="scanner_title">Product Scanner</string>
    <string name="authority">com.daveace.salesdiary.fileprovider</string>
    <string name="cam_capture_cancelled">Image capture process cancelled!</string>
    <string name="product_header">Product</string>
    <string name="stock_header">Stock</string>
    <string name="cost_header">Cost</string>
    <string name="record_customer_title">Record Customer Info</string>
    <string name="customer_name_hint">Customer Name</string>
    <string name="done">Done</string>
    <string name="company">Company</string>
    <string name="phone">Phone</string>
    <string name="signature">signature</string>
    <string name="print_support_error">Your device does not support printing</string>
    <string name="external_storage_permission_explanation">To save an image, the app requires permission to write to external storage</string>
    <string name="ok_confirm">OK</string>
    <string name="sign_below_instr">Please Sign Below</string>
    <string name="out_of_stock">is now out of stock!</string>
    <string name="out_of_stock_hint">Out of stock!</string>
    <string name="invalid_sales_quantity">Invalid Quantity sold</string>
    <string name="no_customer_flag">Provide Customer details</string>
    <string name="select_product">Please, select a product.</string>
    <string name="search">Search</string>
    <string name="search_catalog">Search Catalog</string>
    <string name="more_btn_label">more</string>
    <string name="product_details">Product Details</string>
    <string name="customer_details">Customer Details</string>
    <string name="location_icon">LocationIcon</string>
    <string name="saies_event_details">Sales Event Details</string>
    <string name="cash_inflow">Cash Inflow</string>
    <string name="cash_outflow">Cash Outflow</string>
    <string name="periodic_cash_flow">Periodic Cash-flow</string>
    <string name="profit_loss"><![CDATA[Profit & Loss]]></string>
    <string name="sales_cost"><![CDATA[Sales & Cost]]></string>
    <string name="cash_flow">Cash-flow</string>
    <string name="profitLabel">Profit</string>
    <string name="lossLabel">Loss</string>
    <string name="salesLabel">Sales</string>
    <string name="costLabel">Cost</string>
    <string name="profit_and_loss"><![CDATA[Profit & Loss]]></string>
    <string name="sales_and_cost"><![CDATA[Sales & Cost]]></string>
    <string name="total_inflow">Total Inflow:</string>
    <string name="total_outflow">Total OutFlow:</string>
    <string name="periodic_sales_summary">Periodic Sales Summary</string>
    <string name="Periodic_sales_chart_summary">Chart Summary</string>
    <string name="product_availability_status">Availability Status</string>
    <string name="status">Status:</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="interpret_template">
        %s introduced a %s of %.2f from sales of %.1f unit(s)
        for %.2f, after incurring a cost of %.2f.
    </string>
    <string name="available_status_interpretation_template">
        Significant demand will ensure subsequent sales of the
        remaining %.1f unit(s) at an amount of %.2f to break-even.
    </string>

    <string name="interpretation_template2">
        Over the financial period, a total %s of %.2f was
        recorded after receiving %.2f from sales of products
        which incurred a cost of %.2f.
        A Significant amount of this profit was introduced from
        the sales of %.1f unit(s) of %s.
    </string>
    <string name="interpretation_remark_on_profit">
        The sale of %s generated the highest amount of profit,
        but Profitability level can still be improved.
    </string>
    <string name="interpretation_remark_on_least_profit">
        A formidable strategy should be developed to boost profit
        level of %s and other products within this profit range.
    </string>
    <string name="interpretation_remark_on_losses">
        Finally, more attention should be diverted to the
        dismal sales level recorded from the sales of
    </string>


    <string name = "loss_statement">loss</string>
    <string name="profit_statement">profit</string>
    <string name="sales_event_interpretation_title">Interpretation</string>
    <string name="image_drawable">image drawable</string>
    <string name="no_report">%s is not available. Try again</string>
    <string name="record_success">Sales Recorded Successful</string>
    <string name="scanner_start_message">Scanner Started.</string>
    <string name="scanner_stop_message">Scanner stopped to prevent memory leaks</string>
    <string name="preview_content">preview_content</string>
    <string name="sales_statistics_and_availability_status">Sales Statistics and Availability status</string>
    <string name="sales_interpretation">Sales Interpretation</string>
    <string name="stats_interpretationTitle"><![CDATA[Statistics & Interpretation]]></string>
    <string name="product_sales_statistics">Product Sales Statistics</string>
    <string name="sale_statistics">sale statistics</string>
    <string name="report_generate_msg">Report Generated</string>
    <string name="share_item">Share</string>
    <string name="summarize">Summarize</string>
    <string name="interpret">Interpret</string>
    <string name="interpretation">Interpretations</string>
    <string name="profitability_status">Profitability Status</string>
    <string name="remark">Remark:</string>
    <string name="interpretation_label">Interpretation:</string>
    <string name="summary_interpretation">Summary Interpretation</string>
    <string name="page">Page</string>
    <string name="page_number_pattern">"Page %d of %d"</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="quantity_left_hint">Quantity Left</string>
    <string name="amount_sold_hint">Amount Sold</string>
    <string name="price_hint">Price per item</string>
    <string name="sold_label">Sold</string>
    <string name="left_label">Left</string>
    <string name="product_availability">Product Availability</string>
    <string name="chart_summary">Chart Summary</string>

</resources>
