<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        style="@style/CustomAppThemeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/record_customer_title"
        android:textAlignment="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_large">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/customerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/curved_rect"
            android:drawableStart="@drawable/ic_account"
            android:drawablePadding="@dimen/dimen_small"
            android:hint="@string/customer_name_hint" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/curved_rect"
            android:drawableStart="@drawable/ic_email_black"
            android:drawablePadding="@dimen/dimen_small"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/curved_rect"
            android:drawableStart="@drawable/ic_company_black"
            android:drawablePadding="@dimen/dimen_small"
            android:hint="@string/company" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/curved_rect"
            android:drawableStart="@drawable/ic_phone_black"
            android:drawablePadding="@dimen/dimen_small"
            android:hint="@string/phone"
            android:inputType="phone" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/rect"
            android:elevation="@dimen/elevation_lower"
            app:cardCornerRadius="@dimen/dimen_small">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:text="@string/sign_below_instr"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/clearSignature"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:visibility="invisible"
                    android:backgroundTint="@android:color/white"
                    android:src="@drawable/ic_clear_red" />

                <com.daveace.salesdiary.customview.SignatureDrawer
                    android:id="@+id/signature"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/done"
            style="@style/CustomAppThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/dimen_tiny"
            android:background="@drawable/curved_rect"
            android:drawableStart="@drawable/ic_done_white"
            android:elevation="@dimen/elevation_lower"
            android:text="@string/done" />
    </LinearLayout>
</LinearLayout>