<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_tiny"
    android:elevation="@dimen/elevation_higher"
    app:cardCornerRadius="@dimen/dimen_tiny">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_medium">

        <TextView
            android:id="@+id/salesDate"
            style="@style/CustomAppThemeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/product_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/salesDate" />

        <TextView
            android:id="@+id/productName"
            style="@style/CustomAppThemeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_size_tiny"
            android:text="@string/sample_text"
            app:layout_constraintStart_toEndOf="@id/productImage"
            app:layout_constraintBottom_toBottomOf="@+id/productImage"
             />

        <androidx.appcompat.widget.AppCompatButton
            android:id ="@+id/moreButton"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height_medium"
            android:layout_marginTop="@dimen/dimen_medium"
            android:text="@string/more_btn_label"
            android:drawableStart="@drawable/ic_add"
            android:textSize="@dimen/text_size_tiny"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productName"
            style="@style/CustomAppThemeButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>